--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/filehandlingtest
+spring.data.mongodb.host=Localhost
+spring.data.mongodb.database=Files
+spring.data.mongodb.port=27017
 
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.username=root
-spring.datasource.password=raju
 spring.jpa.hibernate.ddl-auto = update
